# edgar-ai

./: .env.example  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  DOCS.md  Dockerfile.gateway  ENHANCED_granular_debt_extraction_prompt.md  ENHANCED_universal_debt_extraction_prompt.md  FINAL_enhanced_debt_extraction_prompt.md  Makefile  NORTH_STAR.md  README.md  SCHEMA_LOCKED_concise_debt_extraction_prompt.md  assess_extraction_completeness.py  comment-v1.md  compare_extraction_methods.py  credit_agreements_enhanced_20250806_143743.tex  credit_agreements_enhanced_20250806_144033.aux  credit_agreements_enhanced_20250806_144033.out  credit_agreements_enhanced_20250806_144033.tex  credit_agreements_enhanced_20250806_144033.toc  credit_agreements_extraction_20250806_143302.tex  credit_agreements_extraction_20250806_143323.aux  credit_agreements_extraction_20250806_143323.out  credit_agreements_extraction_20250806_143323.tex  credit_agreements_extraction_20250806_143408.aux  credit_agreements_extraction_20250806_143408.out  credit_agreements_extraction_20250806_143408.tex  credit_agreements_extraction_20250806_143408.toc  definition_capture_analysis.md  definition_structure_examples.md  docker-compose.yml  granular_json_extractions_20250806_145934.aux  granular_json_extractions_20250806_145934.tex  json_to_pdf.py  maximalist_credit_agreement_schema.txt  old-goal-prommpt.txt  pyproject.toml  pytest.ini  (+13 more)
.devcontainer/: Dockerfile
.doc/: README.txt
.docs/: README.txt  manifest.txt
correct_agreements_20250806_143700/: rf_monolithics_term_loan.json
correct_agreements_20250806_143743/: syndicated_credit_agreement.json
correct_agreements_20250806_143934/: rf_monolithics_term_loan.json
correct_agreements_20250806_144033/: syndicated_credit_agreement.json
data/: credit-agreement-1.txt
docs/: README.md  architecture.md  architecture_v2.md  critic_schema_refinement.md  development.md  exhibit_type_vs_goal.md  goal_setter_best_practices.md  goal_setter_llm_memory.md  hebbia_method.md  local_development.md  northstar_spec.md  overview.md  persona_execution_plan.md  personas.md  pipeline_fork_merge.md  pipeline_memory_store_scaffolding.md  quickstart.md  schema_merge_referee.md
granular_extractions_20250806_145844/: rf_monolithics_term_loan.json
granular_extractions_20250806_145934/: syndicated_credit_agreement.json
latex_output_20250806_142856/: simple_credit_agreement.json
(+433 files in other folders)
